ASoC: SOF: core: Introduce a new config for DSP ops testing
Introduce a new kernel config to enable testing of DSP operations. With
this config enabled, normal audio operations will be disabled. The API
for the testing interface will be introduced in the follow up patches.

Signed-off-by: Ranjani Sridharan <ranjani.sridharan@linux.intel.com>

--- a/sound/soc/sof/Kconfig
+++ b/sound/soc/sof/Kconfig
@@ -266,6 +266,15 @@ config SND_SOC_SOF_DEBUG_RETAIN_DSP_CONTEXT
 	  Say Y if you want to retain DSP context for FW exceptions.
 	  If unsure, select "N".
 
+config SND_SOC_SOF_DEBUG_DSP_OPS_TEST
+	bool "SOF enable DSP ops testing"
+	help
+	  This option is used for testing DSP operations such as load/unload FW,
+	  set power state, enable/disable core etc. from userspace. Normal audio
+	  operations will be disabled when this option is selected.
+	  Say Y if you want to enable DSP ops testing.
+	  If unsure, select "N".
+
 endif ## SND_SOC_SOF_DEBUG
 
 endif ## SND_SOC_SOF_DEVELOPER_SUPPORT
